# agent

./: .flake8  .gitignore  DEVELOPMENT.md  GUIDE.md  MANIFEST.in  Makefile  README.md  agent.py  chmod_scripts.sh  config.py  install_rich.sh  main.py  pre-commit.sample  pyproject.toml  requirements.txt  setup.py
agent/: __init__.py  api.py  commands.py  config.py  console.py  conversation.py  main.py  tools.py
agent/tools/: __init__.py
agent/tools/conversation/: dump_messages.py
agent/tools/file_operations/: create_empty_file.py  delete_file.py  get_diff_for_proposed_changes.py  list_directory_contents.py  read_file_content.py  search_files.py  write_to_file.py
agent/tools/git/: branch.py  checkout.py  commit.py  log.py  push.py
agent/tools/shared/: gitignore_parser.py  path_utils.py
tools/: create_directory.py  create_empty_file.py  delete_directory.py  delete_file.py  list_directory_contents.py  rich_output.py  syntax_highlight.py
tools/conversation/: dump_messages.py
tools/file_operations/: create_directory.py  create_empty_file.py  delete_directory.py  get_diff_for_proposed_changes.py  list_directory_contents.py  move_files.py  read_file_content.py  search_files.py  write_to_file.py
tools/formatting/: rich_output.py
tools/git/: clone.py  create_branch.py  pull.py  status.py
tools/shared/: gitignore_parser.py  path_utils.py
