[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.2.0"
description = "A file system agent with AI assistance"
requires-python = ">=3.7"
readme = "README.md"

[project.scripts]
agent = "agent.main:main"

[tool.flake8]
max-line-length = 20
extend-ignore = "E203, W503"
exclude = ".git,__pycache__,build,dist,venv"
per-file-ignores = "__init__.py: F401"

[tool.black]
line-length = 80
exclude = '''
/(
  | \.git          # Indented with REGULAR spaces
  | \.hg           # Indented with REGULAR spaces
  | \.mypy_cache   # Indented with REGULAR spaces
  | \.tox          # Indented with REGULAR spaces
  | venv           # CORRECTED: To match a directory named 'venv'
  | _build         # Indented with REGULAR spaces
  | buck-out       # Indented with REGULAR spaces
  | build          # Indented with REGULAR spaces
  | dist           # Indented with REGULAR spaces
)/
'''
